# minic

./: CMakeLists.txt  README.md
src/: main.cpp  minic.cpp  minic.h  test.asm
